// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton component Should match the snapshot of a Button component skeleton 1`] = `
.c0 {
  background-color: rgba(0,0,0,0.08);
  -webkit-animation: hDWTUO 1.5s ease-in-out infinite;
  animation: hDWTUO 1.5s ease-in-out infinite;
  display: inline-block;
  box-sizing: border-box;
  width: 100px;
}

.c1 {
  border-radius: 4px;
  height: 40px;
}

<div
  class="c0 c1"
  width="100px"
/>
`;

exports[`Skeleton component Should match the snapshot of a Tag component loader 1`] = `
.c0 {
  background-color: rgba(0,0,0,0.08);
  -webkit-animation: hDWTUO 1.5s ease-in-out infinite;
  animation: hDWTUO 1.5s ease-in-out infinite;
  display: inline-block;
  box-sizing: border-box;
  width: 100px;
}

.c1 {
  border-radius: 8px;
  margin-right: 8px;
  height: 26px;
}

<div
  class="c0 c1"
  width="100px"
/>
`;

exports[`Skeleton component Should match the snapshot of a circular skeleton 1`] = `
.c0 {
  background-color: rgba(0,0,0,0.08);
  -webkit-animation: hDWTUO 1.5s ease-in-out infinite;
  animation: hDWTUO 1.5s ease-in-out infinite;
  display: inline-block;
  box-sizing: border-box;
  height: 56px;
  width: 56px;
}

.c1 {
  border-radius: 50%;
}

<div
  class="c0 c1"
  height="56px"
  width="56px"
/>
`;

exports[`Skeleton component Should match the snapshot of a simple skeleton 1`] = `
.c0 {
  background-color: rgba(0,0,0,0.08);
  -webkit-animation: hDWTUO 1.5s ease-in-out infinite;
  animation: hDWTUO 1.5s ease-in-out infinite;
  display: inline-block;
  box-sizing: border-box;
  height: 14px;
  width: 100%;
}

<div
  class="SkeletonRect-sc-65m7h4-0 c0"
  height="14px"
  width="100%"
/>
`;

exports[`Skeleton component Should match the snapshot of a text skeleton 1`] = `
.c0 {
  background-color: rgba(0,0,0,0.08);
  -webkit-animation: hDWTUO 1.5s ease-in-out infinite;
  animation: hDWTUO 1.5s ease-in-out infinite;
  display: inline-block;
  box-sizing: border-box;
  height: 14px;
  width: 100%;
}

.c1 {
  border-radius: 4px;
}

<div
  class="c0 c1"
  height="14px"
  width="100%"
/>
`;
